Backend: add endpoint for offered service of a service ID, include offered services into service offerer info
