# backend/src/presentation/routes/service.route.js
@@ -6,7 +6,6 @@ const router = require('./client.route');
 
 router.get('/services', authenticate, serviceController.getAllServices);
 router.get('/services/:id', authenticate, serviceController.getServiceById);
-router.get('/services/:id/serviceOfferers', authenticate, serviceController.getServiceOfferersThatOfferService);
 router.post('/services', validate(serviceCreateSchema), serviceController.createService);
 router.delete('/services/:id', authenticate, serviceController.deleteService);
 router.patch('/services/:id', authenticate, serviceController.updateService);
